class BaseDatos:
    pass